--- a/public/index.html
+++ b/public/index.html
@@ -13,25 +13,20 @@
         body {
             margin: 0;
             padding: 20px;
-            display: flex;
-            justify-content: center;
-            align-items: flex-start;
             min-height: 100vh;
             background-image: url('https://www.transparenttextures.com/patterns/dark-wood.png');
             background-size: cover;
             font-family: 'Cinzel', serif;
             color: #e0d8c3;
-            position: relative;
         }
         .main-container {
             display: flex;
             justify-content: center;
             align-items: flex-start;
-            gap: 40px;
             max-width: 1200px;
             width: 100%;
             margin: 0 auto;
-            position: relative;
+            gap: 20px;
         }
         .container {
             background: rgba(0, 0, 0, 0.7);
@@ -42,18 +37,12 @@
             text-align: center;
         }
         .form-container {
-            flex: 0 0 400px;
-            position: absolute;
-            left: 50%;
-            transform: translateX(-50%);
-            z-index: 2;
+            flex: 0 0 400px; /* Фиксированная ширина */
+            margin: 0 auto; /* Точное центрирование */
         }
         .race-info {
-            flex: 0 0 500px;
-            position: absolute;
-            right: 0;
-            margin-left: 450px; /* Сдвиг правее, чтобы не налезало */
-            z-index: 1;
+            flex: 0 0 500px; /* Фиксированная ширина */
+            margin-left: auto; /* Прижимание к правому краю */
             text-align: left;
             overflow-y: auto;
             max-height: 80vh;
@@ -68,7 +57,7 @@
             font-size: 2.5em; /* Название расы */
         }
         .race-info strong:not(:first-child) {
-            font-size: 1.2em; /* Ключевые фразы (Увеличение характеристик и т.д.) */
+            font-size: 1.2em; /* Ключевые фразы */
             color: #d4a017;
         }
         .form-container input,
@@ -139,6 +128,16 @@
         }
         button[type="submit"]:hover {
             box-shadow: 0 0 10px #d4a017;
+        }
+        @media (max-width: 1000px) {
+            .main-container {
+                flex-direction: column;
+                align-items: center;
+            }
+            .race-info {
+                margin-top: 20px;
+                margin-left: 0; /* Убираем прижимание к правому краю на узких экранах */
+            }
         }
     </style>
 </head>
