--- a/public/characters.html
+++ b/public/characters.html
@@ -1,172 +1,151 @@
-const express = require('express');
-const TelegramBot = require('node-telegram-bot-api');
-const mongoose = require('mongoose');
-const app = express();
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Терновая гряда D&D - Геймплей</title>
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <style>
+        * {
+            box-sizing: border-box;
+        }
+        body {
+            margin: 0;
+            padding: 20px;
+            min-height: 100vh;
+            background-image: url('https://www.transparenttextures.com/patterns/dark-wood.png');
+            background-size: cover;
+            font-family: 'Cinzel', serif;
+            color: #e0d8c3;
+        }
+        .main-container {
+            display: flex;
+            justify-content: center;
+            align-items: flex-start;
+            max-width: 1200px;
+            width: 100%;
+            margin: 0 auto;
+            gap: 20px;
+        }
+        .container {
+            background: rgba(0, 0, 0, 0.7);
+            padding: 20px;
+            position: relative;
+            overflow: hidden;
+            border: 5px solid #d4a017;
+            border-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"><path d="M0 0h20v20h-20zM2 2h16v16h-16z" fill="none" stroke="%23d4a017" stroke-width="2"/><path d="M2 2l16 16M18 2l-16 16" stroke="%23d4a017" stroke-width="2"/></svg>') 20 round;
+            background: linear-gradient(to bottom, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.6)), url('https://www.transparenttextures.com/patterns/wood-pattern.png');
+            box-shadow: 0 0 15px rgba(212, 160, 23, 0.5), inset 0 0 10px rgba(0, 0, 0, 0.7);
+            border-radius: 10px;
+        }
+        .character-info, .scene, .actions {
+            flex: 0 0 400px;
+            text-align: left;
+        }
+        .character-info h2, .scene h2, .actions h2 {
+            font-size: 1.8em;
+            color: #d4a017;
+            text-shadow: 2px 2px 4px #000;
+            margin-top: 0;
+        }
+        .character-info p, .scene p, .actions p {
+            font-size: 1.1em;
+            margin: 10px 0;
+        }
+        .actions button {
+            width: 100%;
+            padding: 10px;
+            background: #d4a017;
+            color: black;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-family: 'Cinzel', serif;
+            font-size: 16px;
+            transition: all 0.3s;
+            margin: 5px 0;
+        }
+        .actions button:hover {
+            box-shadow: 0 0 10px #d4a017;
+        }
+        .error {
+            color: #ff6b6b;
+            font-size: 1em;
+            margin: 10px 0;
+        }
+        @media (max-width: 1000px) {
+            .main-container {
+                flex-direction: column;
+                align-items: center;
+            }
+            .character-info, .scene, .actions {
+                margin-top: 20px;
+            }
+        }
+    </style>
+</head>
+<body>
+    <div class="main-container">
+        <div class="container character-info">
+            <h2>Персонаж</h2>
+            <p id="character-name">Загрузка...</p>
+            <p id="character-race"></p>
+            <p id="character-class"></p>
+            <p id="character-stats"></p>
+            <div id="error" class="error"></div>
+        </div>
+        <div class="container scene">
+            <h2>Сцена</h2>
+            <p>Вы стоите на краю тёмного леса Терновой гряды. Перед вами извилистая тропа, уходящая вглубь чащи, и заброшенная деревня, чьи дома поросли мхом. В воздухе витает запах сырости и чего-то зловещего. Что будете делать?</p>
+        </div>
+        <div class="container actions">
+            <h2>Действия</h2>
+            <button onclick="alert('Вы осматриваете тропу...')">Осмотреть тропу</button>
+            <button onclick="alert('Вы идёте в деревню...')">Пойти в деревню</button>
+            <button onclick="alert('Вы решаете остаться на месте...')">Остаться на месте</button>
+        </div>
+    </div>
+    <script>
+        async function loadCharacter() {
+            const urlParams = new URLSearchParams(window.location.search);
+            const characterId = urlParams.get('characterId');
+            if (!characterId) {
+                document.getElementById('error').textContent = 'Персонаж не выбран';
+                setTimeout(() => window.location.href = '/', 2000);
+                return;
+            }
 
-app.use(express.json());
-app.use(express.static('public'));
-
-const TOKEN = '8179863423:AAHzsQOTZ7MHkXpnYhGNf5coTugmR7rZwlE';
-const WEBHOOK_URL = 'https://thornridge.ru/bot' + TOKEN;
-const bot = new TelegramBot(TOKEN, { polling: false });
-
-const validClasses = [
-    'Воин', 'Варвар', 'Монах', 'Чародей', 'Друид', 'Волшебник',
-    'Жрец', 'Паладин', 'Колдун', 'Следопыт', 'Плут'
-];
-const validRaces = [
-    'Человек', 'Эльф', 'Дварф', 'Гном', 'Тифлинг',
-    'Полурослик', 'Драконорожденный', 'Орк'
-];
-
-// MongoDB connection
-mongoose.connect('mongodb://admin:Netskyline1996!@localhost:27017/thordridge?authSource=admin', {
-    useNewUrlParser: true,
-    useUnifiedTopology: true
-}).then(() => {
-    console.log('Connected to MongoDB');
-}).catch(err => {
-    console.error('Error connecting to MongoDB:', JSON.stringify(err, null, 2));
-});
-
-body {
-    font-family: 'Cinzel', serif;
-    background-image: url('background.jpg'); /* Замени на имя твоего файла */
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
-    color: #d4af37;
-    margin: 0;
-    padding: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    overflow: auto;
-}
-
-// Character schema
-const characterSchema = new mongoose.Schema({
-    id: { type: Number, unique: true },
-    name: { type: String, required: true },
-    race: { type: String, required: true },
-    class: { type: String, required: true },
-    stats: {
-        strength: { type: Number, required: true },
-        dexterity: { type: Number, required: true },
-        constitution: { type: Number, required: true },
-        wisdom: { type: Number, required: true },
-        intelligence: { type: Number, required: true },
-        charisma: { type: Number, required: true }
-    },
-    createdAt: { type: Date, default: Date.now }
-});
-
-const Character = mongoose.model('Character', characterSchema);
-
-// Set webhook
-bot.setWebHook(WEBHOOK_URL).then(() => {
-    console.log(`Webhook set to ${WEBHOOK_URL}`);
-}).catch(err => {
-    console.error('Error setting webhook:', JSON.stringify(err, null, 2));
-});
-
-app.post('/bot' + TOKEN, (req, res) => {
-    console.log('Received webhook update:', JSON.stringify(req.body, null, 2));
-    bot.processUpdate(req.body);
-    res.sendStatus(200);
-});
-
-bot.onText(/\/start/, (msg) => {
-    console.log('Received /start from:', msg.chat.id);
-    bot.sendMessage(msg.chat.id, 'Добро пожаловать в Терновую гряду!', {
-        reply_markup: {
-            inline_keyboard: [[
-                {
-                    text: 'Открыть игру',
-                    web_app: { url: 'https://thornridge.ru' }
-                },
-                {
-                    text: 'Посмотреть персонажей',
-                    web_app: { url: 'https://thornridge.ru/characters' }
+            try {
+                const response = await fetch('/api/characters');
+                const characters = await response.json();
+                const character = characters.find(c => c.id === parseInt(characterId));
+                if (!character) {
+                    document.getElementById('error').textContent = 'Персонаж не найден';
+                    setTimeout(() => window.location.href = '/', 2000);
+                    return;
                 }
-            ]]
-        }
-    }).then(() => {
-        console.log('Sent /start response to:', msg.chat.id);
-    }).catch(err => {
-        console.error('Error sending /start response:', JSON.stringify(err, null, 2));
-    });
-});
 
-app.get('/api', (req, res) => {
-    res.json({ message: 'API работает!' });
-});
-
-app.post('/api/character', async (req, res) => {
-    try {
-        console.log('Received character data:', JSON.stringify(req.body, null, 2));
-        const { name, race, class: charClass, stats } = req.body;
-
-        // Validate input
-        if (!name || typeof name !== 'string' || name.trim().length === 0) {
-            return res.status(400).json({ message: 'Имя персонажа обязательно' });
-        }
-        if (!validRaces.includes(race)) {
-            return res.status(400).json({ message: 'Недопустимая раса персонажа' });
-        }
-        if (!validClasses.includes(charClass)) {
-            return res.status(400).json({ message: 'Недопустимый класс персонажа' });
-        }
-        if (!stats || typeof stats !== 'object') {
-            return res.status(400).json({ message: 'Характеристики обязательны' });
-        }
-        const { strength, dexterity, constitution, wisdom, intelligence, charisma } = stats;
-        const statValues = [strength, dexterity, constitution, wisdom, intelligence, charisma];
-        if (statValues.some(val => !Number.isInteger(val) || val < 8 || val > 20)) {
-            return res.status(400).json({ message: 'Характеристики должны быть целыми числами от 8 до 20' });
-        }
-        const totalPoints = statValues.reduce((sum, val) => sum + (val - 8), 0);
-        if (totalPoints !== 15) {
-            return res.status(400).json({ message: 'Сумма добавленных очков характеристик должна равняться 15' });
+                document.getElementById('character-name').innerHTML = `<strong>Имя:</strong> ${character.name}`;
+                document.getElementById('character-race').innerHTML = `<strong>Раса:</strong> ${character.race}`;
+                document.getElementById('character-class').innerHTML = `<strong>Класс:</strong> ${character.class}`;
+                document.getElementById('character-stats').innerHTML = `
+                    <strong>Характеристики:</strong><br>
+                    Сила: ${character.stats.strength}<br>
+                    Ловкость: ${character.stats.dexterity}<br>
+                    Телосложение: ${character.stats.constitution}<br>
+                    Мудрость: ${character.stats.wisdom}<br>
+                    Интеллект: ${character.stats.intelligence}<br>
+                    Харизма: ${character.stats.charisma}
+                `;
+            } catch (err) {
+                console.error('Error loading character:', err);
+                document.getElementById('error').textContent = 'Ошибка при загрузке персонажа';
+                setTimeout(() => window.location.href = '/', 2000);
+            }
         }
 
-        // Get next ID
-        const lastCharacter = await Character.findOne().sort({ id: -1 }).exec();
-        console.log('Last character:', lastCharacter);
-        const id = lastCharacter ? lastCharacter.id + 1 : 1;
-
-        // Create new character
-        const newCharacter = new Character({
-            id,
-            name: name.trim(),
-            race,
-            class: charClass,
-            stats,
-            createdAt: new Date()
-        });
-
-        // Save to MongoDB
-        await newCharacter.save();
-        console.log('Character saved:', newCharacter);
-
-        res.json({ message: `Персонаж создан: ${name} (${race}, ${charClass})` });
-    } catch (err) {
-        console.error('Error saving character:', JSON.stringify(err, null, 2));
-        res.status(500).json({ message: 'Ошибка сервера при создании персонажа' });
-    }
-});
-
-app.get('/api/characters', async (req, res) => {
-    try {
-        const characters = await Character.find().sort({ createdAt: -1 }).exec();
-        res.json(characters);
-    } catch (err) {
-        console.error('Error fetching characters:', JSON.stringify(err, null, 2));
-        res.status(500).json({ message: 'Ошибка сервера при загрузке персонажей' });
-    }
-});
-
-app.listen(3000, () => {
-    console.log('Server running on port 3000');
-});
+        window.onload = loadCharacter;
+    </script>
+</body>
+</html>
