--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,7 @@
             margin: 5px 0;
             border: 1px solid #d4a017;
             border-radius: 5px;
-            background: rgba(255, 255, 255, 0.1);
+            background: rgba(0, 0, 0, 0.8);
             color: #e0d8c3;
             font-family: 'Cinzel', serif;
             appearance: none;
@@ -75,6 +75,11 @@
             background-repeat: no-repeat;
             background-position: right 10px center;
             cursor: pointer;
+        }
+        .form-container select option {
+            background: rgba(0, 0, 0, 0.9);
+            color: #e0d8c3;
+            font-family: 'Cinzel', serif;
         }
         .form-container select {
             padding-right: 30px;
@@ -147,6 +152,57 @@
                 opacity: 1;
                 transform: translateY(0);
             }
+        }
+        .modal {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.8);
+            justify-content: center;
+            align-items: center;
+            z-index: 1000;
+        }
+        .modal-content {
+            background: linear-gradient(to bottom, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.6)), url('https://www.transparenttextures.com/patterns/wood-pattern.png');
+            border: 5px solid #d4a017;
+            border-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"><path d="M0 0h20v20h-20zM2 2h16v16h-16z" fill="none" stroke="%23d4a017" stroke-width="2"/><path d="M2 2l16 16M18 2l-16 16" stroke="%23d4a017" stroke-width="2"/></svg>') 20 round;
+            box-shadow: 0 0 15px rgba(212, 160, 23, 0.5);
+            border-radius: 10px;
+            padding: 20px;
+            text-align: center;
+            color: #e0d8c3;
+            max-width: 400px;
+            width: 90%;
+            opacity: 0;
+            transform: scale(0.8);
+            animation: modalFadeIn 0.3s ease forwards;
+        }
+        @keyframes modalFadeIn {
+            to {
+                opacity: 1;
+                transform: scale(1);
+            }
+        }
+        .modal-content p {
+            margin: 0 0 20px;
+            font-size: 1.2em;
+        }
+        .modal-content button {
+            padding: 10px 20px;
+            background: #d4a017;
+            color: black;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-family: 'Cinzel', serif;
+            font-size: 16px;
+            transition: all 0.3s;
+        }
+        .modal-content button:hover {
+            box-shadow: 0 0 10px #d4a017;
         }
         @media (max-width: 1000px) {
             .main-container {
@@ -234,7 +290,7 @@
                     <input type="number" id="charisma" name="charisma" value="8" min="8" max="20" readonly>
                     <button type="button" id="charismaInc" onclick="changeStat('charisma', 1)" disabled>+</button>
                 </div>
-                <p class="points">Осталось очков: <span id="points">15</span></p>
+                <p class="points">Осталось очков: <span id="points">15</span> (расовые бонусы не учитываются)</p>
                 <div id="error" class="error"></div>
                 <button type="submit">Создать персонажа</button>
             </form>
@@ -248,6 +304,12 @@
             <div id="classDescription">
                 <p>Выберите класс, чтобы увидеть его описание.</p>
             </div>
+        </div>
+    </div>
+    <div class="modal" id="successModal">
+        <div class="modal-content">
+            <p id="modalMessage"></p>
+            <button onclick="closeModal()">Продолжить</button>
         </div>
     </div>
     <script>
@@ -314,7 +376,7 @@
                 `
             },
             'Полуэльф': {
-                bonuses: { charisma: 2, custom: 2 }, // +2 к Харизме и +1 к двум другим на выбор
+                bonuses: { charisma: 2, custom: 2 },
                 description: `
                     <strong>Полуэльф</strong><br>
                     <strong>Увеличение характеристик:</strong> Значение вашей Харизмы увеличивается на 2, а двух других характеристик на ваш выбор — на 1.<br>
@@ -380,7 +442,7 @@
             `,
             'Монах': `
                 <strong>Монах</strong><br>
-                <strong>Описание:</strong> Монахи — мастера боевых искусств, использующие ловкость и домашнюю энергию (ки). Они тренируются в монастырях.<br>
+                <strong>Описание:</strong> Монахи — мастера боевых искусств, использующие ловкость и внутреннюю энергию (ки). Они тренируются в монастырях.<br>
                 <strong>Ключевая характеристика:</strong> Ловкость и Мудрость.<br>
                 <strong>Особенности:</strong> Бездоспешный бой, Поражающий удар на 3 уровне.<br>
                 <strong>Роль:</strong> Урон, контроль.<br>
@@ -389,7 +451,7 @@
                 <strong>Чародей</strong><br>
                 <strong>Описание:</strong> Чародеи рождаются с врождённой магической силой, которую используют инстинктивно. Их магия часто связана с кровью или судьбой.<br>
                 <strong>Ключевая характеристика:</strong> Харизма.<br>
-                <strong>Особенности:</strong> Гибкие чарыів
+                <strong>Особенности:</strong> Гибкие чары, Метамагические возможности на 3 уровне.<br>
                 <strong>Роль:</strong> Урон, поддержка.<br>
             `,
             'Друид': `
@@ -499,8 +561,8 @@
             const descriptionDiv = document.getElementById('raceDescription');
             if (raceBonuses[race]) {
                 descriptionDiv.innerHTML = raceBonuses[race].description;
-                descriptionDiv.style.animation = 'none'; // Сбрасываем анимацию
-                void descriptionDiv.offsetWidth; // Триггер перерисовки
+                descriptionDiv.style.animation = 'none';
+                void descriptionDiv.offsetWidth;
                 descriptionDiv.style.animation = 'fadeIn 0.5s ease forwards';
             } else {
                 descriptionDiv.innerHTML = '<p>Выберите расу, чтобы увидеть её бонусы и умения.</p>';
@@ -516,8 +578,8 @@
             const descriptionDiv = document.getElementById('classDescription');
             if (classDescriptions[className]) {
                 descriptionDiv.innerHTML = classDescriptions[className];
-                descriptionDiv.style.animation = 'none'; // Сбрасываем анимацию
-                void descriptionDiv.offsetWidth; // Триггер перерисовки
+                descriptionDiv.style.animation = 'none';
+                void descriptionDiv.offsetWidth;
                 descriptionDiv.style.animation = 'fadeIn 0.5s ease forwards';
             } else {
                 descriptionDiv.innerHTML = '<p>Выберите класс, чтобы увидеть его описание.</p>';
@@ -527,12 +589,27 @@
             }
         }
 
-        // Изначально кнопки неактивны
+        function showModal(message, redirectUrl) {
+            const modal = document.getElementById('successModal');
+            const modalMessage = document.getElementById('modalMessage');
+            modalMessage.textContent = message;
+            modal.style.display = 'flex';
+            setTimeout(() => {
+                if (redirectUrl) {
+                    window.location.href = redirectUrl;
+                }
+            }, 2000);
+        }
+
+        function closeModal() {
+            const modal = document.getElementById('successModal');
+            modal.style.display = 'none';
+        }
+
         window.onload = function() {
             const buttons = document.querySelectorAll('.stat-container button');
             buttons.forEach(button => button.disabled = true);
 
-            // Обработчик отправки формы
             document.getElementById('characterForm').addEventListener('submit', async (e) => {
                 e.preventDefault();
                 const name = document.getElementById('name').value.trim();
@@ -572,8 +649,7 @@
                     });
                     const result = await response.json();
                     if (response.ok) {
-                        alert(result.message);
-                        window.location.href = `/gameplay.html?characterId=${result.characterId}`;
+                        showModal(result.message, `/gameplay.html?characterId=${result.characterId}`);
                     } else {
                         document.getElementById('error').textContent = result.message;
                     }
